made chatting better and added color

--- a/web/css/sample.css
+++ b/web/css/sample.css
@@ -142,3 +142,9 @@ nav ul li a#actual {
 nav ul li#current {
 	border-bottom: 1px solid black;
 }
+.msg_b{
+	color: blue;
+}
+.msg_a{
+	color: violet;
+}
